@@ -110,11 +110,10 @@ block now.
     <block>Heart</block>
     <description>
 With a help from the
-Worm of Ages, you dig
-out some of the lead
-in your blocks. It only
-costs {2} hearts to
-pick up a block.
+Worm of Ages, you let
+out the hot air from your
+blocks. It only costs
+{2} hearts to drop one.
     </description>
   </bonus>
 
